--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 gymnasium==0.28.1
 matplotlib==3.9.1
-numpy
+numpy==1.24.4
 pandas==2.2.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 tensorboard==2.17.0
 tensorboard-data-server==0.7.2
-torch
+torch==1.12.1
 tqdm==4.66.4
 typing_extensions==4.12.2
 tyro==0.8.5
